...
  }
  return (
    <Portal>
      <FAB.Group
        open={open}
        visible
        icon={open ? 'close' : 'plus'}
        fabStyle={{ backgroundColor: theme.colors.primary }}
        color={theme.colors.onPrimary}
        style={[styles.fab, { pointerEvents: 'box-none' }]}
        onStateChange={onStateChange}
        actions={actions}
      />
...
