appId: ${APP_ID}
---
- launchApp
- tapOn: "Passbooks"
- assertVisible: "Passbooks"
- tapOn: "Properties"
- assertVisible: "Land & Properties"
- tapOn: "Groups"
- assertVisible: "Groups"
- tapOn: "More"
- assertVisible: "Documents"
- tapOn: "Home"
- assertVisible: "Namaste"
